--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -1,20 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent">
 
-<RelativeLayout
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:background="@color/layoutcolor">
-
-
+   <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/layoutcolor">
 
 <RelativeLayout
 
     android:layout_width="match_parent"
     android:layout_height="130dp"
+    android:id="@+id/header"
     android:background="@color/backroundcolor">
 
     <ImageView
@@ -34,220 +32,246 @@ android:background="@color/layoutcolor">
 
 </RelativeLayout>
 
-<RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <ImageView
-        android:id="@+id/nameicon"
-        android:layout_width="30dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="150dp"
-        android:paddingLeft="3dp"
-        android:paddingRight="5dp"
-        android:src="@drawable/ic_person" />
-
-    <EditText
-        android:id="@+id/name"
-        android:hint="  full name"
-        android:layout_centerHorizontal="true"
-        android:layout_width="320dp"
-        android:layout_height="45dp"
-        android:background="@drawable/editwithoutcolor"
-        android:layout_marginTop="150dp"
-        android:padding="12dp"
-
-        />
-
-    <ImageView
-        android:id="@+id/emailicon"
-        android:layout_width="30dp"
-        android:layout_height="40dp"
-        android:src="@drawable/ic_email_black_24dp"
-        android:layout_below="@id/nameicon"
-        android:layout_marginTop="24dp"
-        android:paddingLeft="6dp"
-        android:paddingRight="5dp" />
-
-    <EditText
-        android:id="@+id/email"
-        android:hint="  E-mail"
-        android:layout_below="@id/name"
-        android:layout_centerInParent="true"
-        android:layout_width="320dp"
-        android:layout_height="45dp"
-        android:background="@drawable/editwithoutcolor"
-        android:layout_marginTop="20dp"
-        android:padding="12dp"/>
-
-    <ImageView
-        android:id="@+id/passicon"
-        android:layout_below="@id/emailicon"
-        android:layout_width="30dp"
-        android:layout_height="40dp"
-        android:src="@drawable/ic_fill_lock"
-        android:layout_marginTop="27dp"
-        android:paddingLeft="6dp"
-        android:paddingRight="5dp" />
-
-    <EditText
-        android:id="@+id/pass"
-        android:hint="  Password"
-        android:layout_below="@id/email"
-        android:layout_width="320dp"
-        android:layout_height="45dp"
-        android:drawableRight="@drawable/eye"
-        android:layout_centerInParent="true"
-        android:background="@drawable/editwithoutcolor"
-        android:layout_marginTop="20dp"
-        android:padding="12dp"
-        />
-
-    <ImageView
-        android:id="@+id/phoneicon"
-        android:layout_below="@id/passicon"
-        android:layout_width="30dp"
-        android:layout_height="40dp"
-        android:src="@drawable/ic_phone_black_24dp"
-        android:layout_marginTop="27dp"
-        android:paddingLeft="6dp"
-        android:paddingRight="5dp"
-        />
-
-    <EditText
-        android:id="@+id/phonenum"
-        android:hint="  Phone Number"
-        android:layout_below="@id/pass"
-        android:layout_centerInParent="true"
-        android:layout_width="320dp"
-        android:layout_height="45dp"
-        android:background="@drawable/editwithoutcolor"
-        android:layout_marginTop="20dp"
-        android:padding="12dp"/>
-
-    <ImageView
-        android:id="@+id/addressicon"
-        android:layout_below="@id/phoneicon"
-        android:layout_width="30dp"
-        android:layout_height="40dp"
-        android:src="@drawable/ic_location_on_black_24dp"
-        android:layout_marginTop="27dp"
-        android:paddingLeft="6dp"
-        android:paddingRight="5dp" />
-
-    <EditText
-        android:id="@+id/address"
-        android:hint="Address"
-        android:layout_below="@+id/phonenum"
-        android:layout_centerInParent="true"
-        android:layout_width="320dp"
-        android:layout_height="45dp"
-        android:background="@drawable/editwithoutcolor"
-        android:layout_marginTop="20dp"
-        android:padding="12dp"/>
-
-    <ImageView
-        android:id="@+id/semicon"
-        android:layout_below="@id/addressicon"
-        android:layout_width="40dp"
-        android:layout_height="50dp"
-        android:src="@drawable/ic_study"
-        android:layout_marginTop="27dp"
-        android:paddingLeft="6dp"
-        android:paddingRight="5dp" />
-
-    <EditText
-        android:id="@+id/sem"
-        android:hint="  Semester"
-        android:layout_below="@id/address"
-        android:layout_centerInParent="true"
-        android:layout_width="320dp"
-        android:layout_height="45dp"
-        android:background="@drawable/editwithoutcolor"
-        android:layout_marginTop="20dp"
-        android:padding="12dp"/>
-
-    <ImageView
-        android:id="@+id/branchicon"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_below="@id/semicon"
-        android:layout_marginTop="21dp"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
-        android:src="@drawable/ic_books_stack_of_three" />
-
-    <EditText
-        android:id="@+id/branch"
-        android:hint="  Branch"
-        android:layout_below="@id/sem"
-        android:layout_centerInParent="true"
-        android:layout_width="320dp"
-        android:layout_height="45dp"
-        android:background="@drawable/editwithoutcolor"
-        android:layout_marginTop="20dp"
-        android:padding="12dp"/>
-
-    <ImageView
-        android:id="@+id/enoicon"
-        android:layout_width="30dp"
-        android:layout_height="40dp"
-        android:layout_below="@id/branchicon"
-        android:layout_marginTop="14dp"
-        android:paddingLeft="6dp"
-        android:paddingRight="5dp"
-        android:src="@drawable/ic_view_list_black_24dp" />
-
-    <EditText
-        android:id="@+id/eno"
-        android:hint="  Enrollment Number"
-        android:layout_below="@id/branch"
-        android:layout_centerInParent="true"
-        android:layout_width="320dp"
-        android:layout_height="45dp"
-        android:background="@drawable/editwithoutcolor"
-        android:layout_marginTop="20dp"
-        android:padding="12dp"/>
-
-    <ImageView
-        android:id="@+id/clgicon"
-        android:layout_width="50dp"
-        android:layout_height="60dp"
-        android:layout_below="@id/enoicon"
-        android:paddingTop="27dp"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
-        android:src="@drawable/ic_company" />
-
-    <EditText
-        android:id="@+id/clg"
-        android:hint="  College"
-        android:layout_below="@+id/eno"
-        android:layout_width="320dp"
-        android:layout_centerInParent="true"
-        android:layout_height="45dp"
-        android:background="@drawable/editwithoutcolor"
-        android:layout_marginTop="20dp"
-        android:padding="12dp"/>
 
 
-    <Button
+        <ImageView
+            android:id="@+id/nameicon"
+            android:layout_width="30dp"
+            android:layout_height="40dp"
+            android:paddingStart="3dp"
+            android:paddingEnd="5dp"
+            android:layout_below="@id/header"
+            android:layout_marginTop="10dp"
+            android:src="@drawable/ic_person" />
 
-        android:id="@+id/signin"
-        android:layout_below="@id/clg"
-        android:layout_width="150dp"
-        android:layout_centerInParent="true"
-        android:layout_height="wrap_content"
-        android:background="@drawable/rounded_button"
-        android:layout_marginTop="30dp"
-        android:layout_marginBottom="50dp"
-        android:text="Sign up"
-        android:textColor="@color/layoutcolor"
-        />
+        <EditText
+            android:id="@+id/name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/editwithoutcolor"
+            android:hint="full name"
+            android:layout_toEndOf="@id/nameicon"
+            android:layout_below="@id/header"
+            android:layout_marginEnd="20dp"
+            android:padding="10dp"
+            android:layout_marginTop="10dp"
+            android:inputType="text"/>
 
-</RelativeLayout>
+       <ImageView
+           android:id="@+id/emailicon"
+           android:layout_width="30dp"
+           android:layout_height="40dp"
+           android:paddingStart="3dp"
+           android:paddingEnd="5dp"
+           android:layout_below="@id/nameicon"
+           android:layout_marginTop="20dp"
+           android:src="@drawable/ic_email_black_24dp"
+           />
+
+       <EditText
+           android:id="@+id/email"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:layout_centerHorizontal="true"
+           android:background="@drawable/editwithoutcolor"
+           android:hint="E-mail"
+           android:layout_toEndOf="@id/emailicon"
+           android:layout_below="@id/name"
+           android:layout_marginEnd="20dp"
+           android:padding="10dp"
+           android:layout_marginTop="15dp"
+           android:inputType="textEmailAddress"/>
+
+       <ImageView
+           android:id="@+id/passicon"
+           android:layout_width="30dp"
+           android:layout_height="40dp"
+           android:paddingStart="3dp"
+           android:paddingEnd="5dp"
+           android:layout_below="@id/emailicon"
+           android:layout_marginTop="20dp"
+           android:src="@drawable/ic_fill_lock" />
+
+       <EditText
+           android:id="@+id/pass"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:layout_centerHorizontal="true"
+           android:background="@drawable/editwithoutcolor"
+           android:hint="Password"
+           android:layout_toEndOf="@id/passicon"
+           android:layout_below="@id/email"
+           android:layout_marginEnd="20dp"
+           android:padding="10dp"
+           android:layout_marginTop="15dp"
+           android:inputType="textPassword"
+           android:drawableRight="@drawable/eye"/>
 
 
-</RelativeLayout>
+       <ImageView
+           android:id="@+id/phoneicon"
+           android:layout_width="30dp"
+           android:layout_height="40dp"
+           android:paddingStart="3dp"
+           android:paddingEnd="5dp"
+           android:layout_below="@id/passicon"
+           android:layout_marginTop="20dp"
+           android:src="@drawable/ic_phone_black_24dp" />
+
+       <EditText
+           android:id="@+id/phone"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:layout_centerHorizontal="true"
+           android:background="@drawable/editwithoutcolor"
+           android:hint="Phone number"
+           android:layout_toEndOf="@id/phoneicon"
+           android:layout_below="@id/pass"
+           android:layout_marginEnd="20dp"
+           android:padding="10dp"
+           android:layout_marginTop="15dp"
+           android:inputType="phone"/>
+
+       <ImageView
+           android:id="@+id/addressicon"
+           android:layout_width="30dp"
+           android:layout_height="40dp"
+           android:paddingStart="3dp"
+           android:paddingEnd="5dp"
+           android:layout_below="@id/phoneicon"
+           android:layout_marginTop="20dp"
+           android:src="@drawable/ic_location_on_black_24dp" />
+
+       <EditText
+           android:id="@+id/address"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:layout_centerHorizontal="true"
+           android:background="@drawable/editwithoutcolor"
+           android:hint="Address"
+           android:layout_toEndOf="@id/addressicon"
+           android:layout_below="@id/phone"
+           android:layout_marginEnd="20dp"
+           android:padding="10dp"
+           android:layout_marginTop="15dp"
+           android:inputType="text"/>
+
+       <ImageView
+           android:id="@+id/semicon"
+           android:layout_width="30dp"
+           android:layout_height="40dp"
+           android:paddingStart="3dp"
+           android:paddingEnd="5dp"
+           android:layout_below="@id/addressicon"
+           android:layout_marginTop="20dp"
+           android:src="@drawable/ic_study" />
+
+       <EditText
+           android:id="@+id/sem"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:layout_centerHorizontal="true"
+           android:background="@drawable/editwithoutcolor"
+           android:hint="Semester"
+           android:layout_toEndOf="@id/semicon"
+           android:layout_below="@id/address"
+           android:layout_marginEnd="20dp"
+           android:padding="10dp"
+           android:layout_marginTop="15dp"
+           android:inputType="number"/>
+
+       <ImageView
+           android:id="@+id/branchicon"
+           android:layout_width="30dp"
+           android:layout_height="30dp"
+           android:paddingStart="3dp"
+           android:paddingEnd="5dp"
+           android:layout_below="@id/semicon"
+           android:layout_marginTop="20dp"
+           android:src="@drawable/ic_books_stack_of_three" />
+
+       <EditText
+           android:id="@+id/branch"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:layout_centerHorizontal="true"
+           android:background="@drawable/editwithoutcolor"
+           android:hint="Branch"
+           android:layout_toEndOf="@id/branchicon"
+           android:layout_below="@id/sem"
+           android:layout_marginEnd="20dp"
+           android:padding="10dp"
+           android:layout_marginTop="15dp"
+           android:inputType="text"/>
+
+       <ImageView
+           android:id="@+id/enoicon"
+           android:layout_width="30dp"
+           android:layout_height="30dp"
+           android:paddingStart="3dp"
+           android:paddingEnd="5dp"
+           android:layout_below="@id/branchicon"
+           android:layout_marginTop="20dp"
+           android:src="@drawable/ic_view_list_black_24dp" />
+
+       <EditText
+           android:id="@+id/eno"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:layout_centerHorizontal="true"
+           android:background="@drawable/editwithoutcolor"
+           android:hint="Enrollment no"
+           android:layout_toEndOf="@id/enoicon"
+           android:layout_below="@id/branch"
+           android:layout_marginEnd="20dp"
+           android:padding="10dp"
+           android:layout_marginTop="15dp"
+           android:inputType="number"/>
+
+       <ImageView
+           android:id="@+id/collegeicon"
+           android:layout_width="40dp"
+           android:layout_height="40dp"
+           android:paddingStart="3dp"
+           android:paddingEnd="5dp"
+           android:layout_below="@id/enoicon"
+           android:layout_marginTop="20dp"
+           android:src="@drawable/ic_company"/>
+
+       <EditText
+           android:id="@+id/college"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:layout_centerHorizontal="true"
+           android:background="@drawable/editwithoutcolor"
+           android:hint="college name"
+           android:layout_toEndOf="@id/enoicon"
+           android:layout_below="@id/eno"
+           android:layout_marginEnd="20dp"
+           android:padding="10dp"
+           android:layout_marginTop="15dp"
+           android:inputType="text"/>
+
+       <Button
+           android:id="@+id/signin"
+           android:layout_width="150dp"
+           android:layout_height="wrap_content"
+           android:layout_centerHorizontal="true"
+           android:text="Sign in"
+           android:textColor="#ffff"
+           android:background="@drawable/rounded_button"
+           android:layout_below="@id/college"
+           android:layout_marginEnd="20dp"
+           android:padding="10dp"
+           android:layout_marginTop="30dp">
+
+       </Button>
+
+
+
+
+   </RelativeLayout>
+
 
 </ScrollView>
